add written date

--- a/日语的前世今生.md
+++ b/日语的前世今生.md
@@ -1,5 +1,3 @@
-> 这是小董君365日写作计划第4天的写作内容。
-
 从2012年学习日语开始，接触这门语言已有四年时间。当初学日语，既不是为了看动漫，也不是为了看日剧，只是想更加了解日本的历史与文化。如今工作，也每天需要日语写文档，写邮件，看资料，这几年，似乎没怎么离开过日语。我没有忘记历史，但是也喜欢日语，或许是因为我更喜欢含蓄的东方文化所致吧。
 
 我了解任何一门知识都是从历史开始的，今天就来科普一下日语的历史，破除大家对日语的一些误会。
@@ -21,3 +19,6 @@
 为了方便国际友人学日语，在近代，又出现了罗马音，其实就是用26个字母组合的日语，就像汉字拼音一样。即使外国人不会写也没有关系，只要掌握罗马音，照样可以学会说日语。
 
 有兴趣的朋友可以去了解详细的日语由来，小董君就科普到这里了。
+
+小董君
+2016年3月8日
