--- a/韩文的前世今生.md
+++ b/韩文的前世今生.md
@@ -1,5 +1,3 @@
-> 这是小董君365日写作计划第3天的写作内容。
-
 最近的朋友圈又被思密达哥哥宋钟基刷屏了，《太阳的后裔》又给宋钟基吸粉无数。小董君年轻的时候也追过韩剧，不过不是大家追的这种青春偶像剧，而是韩国历史剧。
 
 2010年我高二，在凤凰卫视偶然看到了《李算》这部剧，从此被韩剧历史剧彻底拽走，成为一枚朝鲜历史爱好者。 
@@ -25,3 +23,6 @@
 谚文后来还遭遇了一次浩劫，燕山君（就是《王的男人》上面那个王）当政期间，暴虐无道，很多人用谚文写得文章嘲讽燕山君的暴行，因此，燕山君一度下令禁止使用谚文。但是已经禁不住了，谚文已经在当时广泛流传于民间，但真正让谚文成为官方文字已经是20世纪朝鲜王朝灭亡之后了。
 
 PS：要了解韩文的产生可以看看钟基欧巴主演的另一部电视剧《树大根深》，也可以直接看韩国作家李正明的小说《树大根深》，《成均馆绯闻》、《风之画员》都是他写的。
+
+小董君
+2016年3月8日			
